# code-tribunal

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ai-review.yml  ci.yml  publish-ai-review-images.yml
ai-review/: CONSENSUS.md  EXAMPLE_PIPELINE_WALKTHROUGH.md  GITHUB_DOGFOOD_ACCEPTANCE.md  PHASE_1_ACCEPTANCE.md  PHASE_2_ACCEPTANCE.md  PHASE_3_ACCEPTANCE.md  PHASE_4_ACCEPTANCE.md  PHASE_5_5_ACCEPTANCE.md  PHASE_5_ACCEPTANCE.md  README.md
ai-review/adapters/: antigravity.sh  claude.sh  codex.sh  cursor.sh  gemini.sh  opencode.sh  run_reviewer.sh  validate_output.py
ai-review/ci/: build-images.gitlab-ci.yml  review-child.gitlab-ci.yml  review.github-actions.yml  review.gitlab-ci.yml
ai-review/config/: review.yaml
ai-review/images/: SUPPLY_CHAIN.md  base.Dockerfile  cursor-agent.pin  package-lock.json  package.json  python-constraints.txt  reviewer.Dockerfile
ai-review/prompts/: critique.md  respond.md  review.md
ai-review/rules/: README.md
ai-review/schemas/: adapter_status.schema.json  consensus.schema.json  critique_batch.schema.json  finding_batch.schema.json  gate_result.schema.json  post_result.schema.json  raw_finding_batch.schema.json  state.schema.json  state_aliases.schema.json
docs/: ARCHITECTURE.md  CONSENSUS.md  REVISION_LIFECYCLE.md  SECURITY_MODEL.md  TROUBLESHOOTING.md  configuration.md  operations.md
docs/archived-improvement-plans/: README.md  issue-tracker-integration.md  legacy-ai-review-implementation-ready-spec.md  (+3 more)
release/: 1.0.0-rc.1.md  1.0.0.md  release-inputs.json
scripts/: build_release_manifest.py  check_docs.py  check_release_inputs.py  check_release_manifest.py  check_supply_chain_pins.py  release_common.py  smoke_cursor_permissions.sh  verify_pipeline_trust.py
specs/: ai-review-implementation-ready-spec.md  project-rules-and-learning-spec.md
(+164 files in other folders)
